# goit_py_web_hw_10

./: docker-compose.yaml  pyproject.toml
bd_data/pgdata/: postmaster.pid
bd_data/pgdata/base/16384/: 1247  1249  1259  1259_fsm  16389  16390  16395  16397  16398  16401  16403  16405  16406  16409  16411  16417  16419  16425  16426  16429  16431  16437  16439  16443  16445  16452  16453  16454  16468  16481  16482  16495  16496  16497  16498  16503  16504  16516  16517  16526  (+56 more)
bd_data/pgdata/global/: 1260  pg_control  pg_internal.init
bd_data/pgdata/pg_xact/: 0000
quotes/app_quotes/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
quotes/app_quotes/migrations/: 0001_initial.py  0002_tag_remove_quote_tags_quote_tags.py  0003_alter_author_born_date.py
quotes/app_quotes/static/static/: style.css
quotes/app_quotes/templates/: pagination.html
quotes/app_quotes/templates/app_quotes/: base.html  index.html
quotes/app_quotes/templates/app_quotes/authors/: author_details.html  author_form.html  authors_list.html  top_authors.html
quotes/app_quotes/templates/app_quotes/quotes/: quote_details.html  quote_form.html  quotes_list.html
quotes/app_quotes/templates/app_quotes/tags/: add_tag.html  tag_detail.html  top_tags.html
quotes/quotes/: asgi.py  settings.py  urls.py  views.py  wsgi.py
quotes/users/: forms.py  urls.py  views.py
quotes/users/templates/users/: login.html  logout.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  signup.html
quotes/utils/: mongodb_connect.py  test.py
