[tool.poetry]
name = "hw 10"
version = "0.1.0"
description = ""
authors = ["Yaroslav Kubitskyi <fenixm22@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
django = "5.1.1"
psycopg2 = "^2.9.9"
pymongo = "^4.8.0"
sqlalchemy = "^2.0.34"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
